<resources>
    <string name="app_name">Wane</string>

    <!-- name activities -->
    <string name="activity_main">Purchase Orders</string>
    <string name="status_messenger">Status Messenger</string>

    <!-- commons -->
    <string name="commons_btn_save">Save</string>
    <string name="commons_btn_delete">Delete</string>
    <string name="commons_btn_update">Update</string>
    <string name="commons_btn_create">Create</string>
    <string name="commons_btn_insert">Insert</string>
    <string name="commons_btn_add">Add</string>
    <string name="commons_btn_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg_error_login_btnLogin">Login</string>
    <string name="msg_error_login_password">Password required</string>
    <string name="msg_error_login_user">User required</string>
    <string name="msg_error_login_password_incorrect">This password is incorrect</string>
    <string name="msg_error_login_user_incorrect">This user is incorrect</string>
    <!-- main activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_main_activity_opt1">Refresh</string>
    <string name="menu_main_activity_opt2">opt 2</string>
    <string name="menu_main_activity_opt3">Logout</string>
    <!-- status messenger -->
    <string name="status_messenger_btn_save">MainActivity</string>
    <!-- purchase order -->
    <string name="po_txt_status">Status: </string>
    <string name="po_txt_deliverydate">Delivery date: </string>
    <string name="po_txt_deliveryaddress">Delivery Address: </string>
    <!-- purchase order details -->
    <string name="pod_lbl_sku">Sku: </string>
    <string name="pod_lbl_quantity">Quantity: </string>
    <string name="pod_lbl_shortdescription">Short Description: </string>
    <string name="pod_lbl_titlepurchasedetails">Details: </string>
    <string name="title_activity_purchase_order_details">Purchase Order Details</string>
    <string name="pod_menu_location">Location</string>

</resources>
